Removed JRE version issues